feat: 🎸 add economy page and route
and add an input in the page for the economy value

--- a/src/shared.css
+++ b/src/shared.css
@@ -20,6 +20,9 @@
 .custom-input::placeholder {
   color: var(--neutral_e9);
 }
+.custom-input.without-margin {
+  margin: 0;
+}
 .custom-button {
   background-color: var(--primary_400);
   border: none;
