--- a/src/style.css
+++ b/src/style.css
@@ -392,7 +392,7 @@ p {
 .economy-field-guide {
   font-size: 11px;
   margin: 8px 0;
-  color: var(--error);
+  color: var(--warning);
 }
 .economy-date-form {
   display: flex;
