--- a/src/shared.css
+++ b/src/shared.css
@@ -47,3 +47,13 @@
   border: 2px solid var(--secondary_300);
 }
 /* End Forms */
+
+/* Loading */
+.loading-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* End Loading */
